# streamtoqwen

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  audio_monitor_requirements.txt  audio_monitor_setup.py  azure-pipelines.yml  elevenlabs_audio_monitor.py  elevenlabs_rest_client.py  enhanced_performance_analysis.py  enhanced_performance_report.json  explore_elevenlabs.py  export_architecture_pdf.py  langgraph_flow.py  launcher.py  main.py  main_elevenlabs_microphone.py  main_elevenlabs_microphone_multi_agent.py  mem0_consolidator.py  messages.jsonl  models.py  multi_gpu_4090_architecture.py  multi_gpu_agent_system.py  multi_gpu_middleware.py  multi_gpu_performance_analysis.py  multi_gpu_requirements.txt  openai_client.py  pyproject.toml  quen_client.py  requirements.txt  requirements_mvp.txt  stream_processor_enhanced.py  stream_processor_simple.py  stream_processor_true_streaming.py  system_architecture_diagram.py  test_elevenlabs_api.py
agents/: __init__.py  base_agent.py  decision_agent.py  intent_agent.py  learning_agent.py  sentiment_agent.py  strategy_agent.py
documentation/: ENHANCEMENT_SUMMARY.md  FLINK_WINDOWING_LOGIC.md  README_ELEVENLABS.md  SETUP_SUMMARY.md
legacy/: console_app.py  launcher.py  models.py  quen_client.py  test_app.py
scripts/: deploy_dev.sh  run_api.sh  setup.sh
simulation/: elevenlabs_client.py  main_elevenlabs.py  main_elevenlabs_rest.py  microphone_client.py  stream_processor.py  test_elevenlabs_audio.py  test_elevenlabs_sdk.py  test_elevenlabs_websocket.py
tests/: conftest.py  test_ingestion_windowing.py  (+2 more)
(+27 files in other folders)
