[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-mvp"
version = "0.1.0"
description = "RM MVP on Azure + LangSmith using OpenAI"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
